--- a/Either/Either/Either.tt
+++ b/Either/Either/Either.tt
@@ -13,7 +13,7 @@ namespace RhymesOfUncertainty;
 
 public struct <#=name#>
 {
-    public object Value { get; private set; }
+    public object Thing { get; private set; }
 <#
         for(int j = 1; j <= i; j++)
         {
@@ -21,7 +21,7 @@ public struct <#=name#>
 
     public static implicit operator <#=name#>(T<#=j#> t<#=j#>)
     {
-        return new <#=name#> { Value = t<#=j#> };
+        return new <#=name#> { Thing = t<#=j#> };
     }
 <#
         }
